# kmms_prog_2024

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  run_tests.sh
modern_programming/Long_numbers/src/: long_number.cpp  long_number.hpp
modern_programming/Long_numbers/test/: CMakeLists.txt  test_operators.cpp  tests.cpp
